# NLP-Project2

./: .gitignore  Banking_Intent_Detection_Colab.ipynb  README.md  inference.bat  inference.sh  requirements.txt  train.bat  train.sh
Ex2/: .gitignore  Banking_Intent_Detection_Colab.ipynb  inference.sh  requirements.txt  summary.md  train.sh
Ex2/sample_data/: test.csv
Ex3/: .env.example  .gitignore  README.md  REFACTORING_PLAN.md  Run_App_Colab.ipynb  pyproject.toml  requirements.txt  run.py  start_all.ps1  summary.md
Ex3/app/: main.py
Ex3/app/agent/: orchestrator.py
Ex3/app/clients/: base.py  ollama_client.py
Ex3/app/core/: inference.yaml  schemas.py  settings.py
Ex3/app/data/: policies.py
Ex3/app/nodes/: draft_node.py  intent_classifier_wrapper.py  intent_node.py  policy_node.py  priority_node.py  router_node.py  validation_node.py
Ex3/configs/: default.yaml
Ex3/docs/: api.md  architecture.md  setup.md
Ex3/docs/notebooks/: Run_Project_Colab.ipynb  Run_Project_Local.ipynb
Ex3/examples/: sample_requests.json
Ex3/frontend/: app.py
Ex3/scratch/: manual_test.py
Ex3/scripts/: test_workflow.py
Ex3/tests/: conftest.py
Ex3/tests/test_nodes/: test_intent_node.py
Ex4/: [NOTEBOOK] Ollama.ipynb  [TEMPLATE] Dockerfile  [TEMPLATE] Makefile  [TEMPLATE] docker-compose.yml  docker-compose.yml
Ex4/backend/: Dockerfile  requirements.txt  server.py
Ex4/frontend/: Dockerfile  app.py
configs/: inference.yaml  train.yaml
sample_data/: test.csv  train.csv
scripts/: evaluate.py  inference.py  preprocess_data.py  train.py
(+1 files in other folders)
